:bug: - fix: fix a bug where the checkbox column in the Datagrid was too large on bigger screens

--- a/src/components/data/datagrid/datagrid.scss
+++ b/src/components/data/datagrid/datagrid.scss
@@ -88,12 +88,13 @@
   &__cell--type-boolean,
   &__cell--type-number {
     text-align: end;
-    width: 0;
+    width: 0; // TODO: Possibly 1px for WebKit (Safari)?
   }
 
   &__cell--checkbox {
     @media screen and (min-width: constants.$breakpoint-desktop) {
       max-width: calc(var(--typography-line-height-body-s) + var(--spacing-h));
+      width: 1px; // WebKit (Safari)?
     }
   }
 
